src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(

  MONTH(TODAY())&gt;MONTH(Date_of_Birth__c ),

    YEAR(TODAY())-YEAR(Date_of_Birth__c ), 

    IF(AND(MONTH(TODAY()) &lt;=  MONTH(Date_of_Birth__c ), DAY(TODAY()) &gt;= DAY(Date_of_Birth__c )),

      YEAR(TODAY())-YEAR(Date_of_Birth__c ),

      (YEAR(TODAY())-YEAR(Date_of_Birth__c ))-1)
 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CTC__c</fullName>
        <label>Annual CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhi Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For active employees</description>
        <label>Current Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Tech.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSc.</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_address__c</fullName>
        <label>Email address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dot Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c  &amp;&quot; &quot;&amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_on_Notice_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is on Notice Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Working_Day__c</fullName>
        <formula>Resignation_Date__c + 60</formula>
        <label>Last Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Email_ID__c</fullName>
        <formula>Manager__r.Email_address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Email ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Role of the employee as project manager, developer, technical lead etc.</inlineHelpText>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>social security number</description>
        <label>SSN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Credited_Till_Date__c</fullName>
        <label>Salary Credited Till Date</label>
        <summarizedField>Salary_Details__c.Gross_Salary__c</summarizedField>
        <summaryForeignKey>Salary_Details__c.Credited_To__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IMAGE 
(  IF(AND ( Is_Active__c ,  Is_on_Notice_Period__c), &quot;/img/samples/color_yellow.gif&quot;, 
     IF( Is_Active__c , &quot;/img/samples/color_green.gif&quot;,&quot;/img/samples/color_red.gif&quot; ) ) 
   , &quot;status&quot; , 20, 30
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>check_role__c</fullName>
        <label>check_role</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>Employees_on_Notice_Period</fullName>
        <columns>NAME</columns>
        <columns>Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_on_Notice_Period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Employees on Notice Period</label>
        <sharedTo>
            <role>Human_Resource</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inactive_Employees</fullName>
        <columns>NAME</columns>
        <columns>Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Employees</label>
        <sharedTo>
            <role>Human_Resource</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I6F000002f2boUAA_00N6F00000JEaL9UAL</fullName>
        <active>true</active>
        <field>Employee__c.Manager__c</field>
        <filterItems>
            <field>Employee__c.Role__r.Name</field>
            <operation>equals</operation>
            <value>Project Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Employee_Manager</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I6F000002f6tvUAA_00N6F00000JFKkbUAH</fullName>
        <active>true</active>
        <field>Project_Details__c.Manager__c</field>
        <filterItems>
            <field>Employee__c.Role__r.Name</field>
            <operation>equals</operation>
            <value>Project Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Project Details_Manager</name>
    </namedFilters>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>Non_Technical</fullName>
        <active>true</active>
        <description>For employees with non technical job</description>
        <label>Non - Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <description>For employees with technical job</description>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_age</fullName>
        <active>true</active>
        <description>Check age of employee</description>
        <errorConditionFormula>IF (  Age__c  &lt; 21  ||  Age__c &gt; 30 , True , false )</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Please provide a valid Date of birth. Employee cannot be less than 21 years of Age and greater than 30 years.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_date_of_birth</fullName>
        <active>true</active>
        <description>Date of birth should not be greater than current date.</description>
        <errorConditionFormula>IF( Date_of_Birth__c &gt; Today(), true , false)</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Date of birth should not be greater than today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_working_date</fullName>
        <active>true</active>
        <description>Last working date cannot be greater than joining date.</description>
        <errorConditionFormula>IF(Date_of_Joining__c   &gt;=   Last_Working_Day__c  , true , false )</errorConditionFormula>
        <errorDisplayField>Resignation_Date__c</errorDisplayField>
        <errorMessage>Last working date cannot be greater than joining date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resignation_date_validation</fullName>
        <active>true</active>
        <description>If notice period is checked to true, resignation date cannot be null.</description>
        <errorConditionFormula>IF ( Is_on_Notice_Period__c  = true &amp;&amp; ISBLANK(Resignation_Date__c) , TRUE ,AND( Is_on_Notice_Period__c == FALSE ,
NOT( ISBLANK( Resignation_Date__c )  ) ) )</errorConditionFormula>
        <errorDisplayField>Resignation_Date__c</errorDisplayField>
        <errorMessage>Please enter a valid registration date. If your are not on notice period , you cannot enter resignation date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>if_not_active_restrict_salary</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( Is_Active__c == NULL ,  $ObjectType.Salary_Details__c.Fields.Credited_To__c == NULL , FALSE)</errorConditionFormula>
        <errorMessage>cannot create salary record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>if_not_on_notice_period</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Is_on_Notice_Period__c == FALSE,  Resignation_Date__c == NULL, False)</errorConditionFormula>
        <errorDisplayField>Resignation_Date__c</errorDisplayField>
        <errorMessage>Resignation date cannot be entered as you are not on notice period.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validate_SSN_number_upto_10_digits</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISBLANK(SSN__c)),
    MAX(SSN__c) &lt; 10
)</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>SSN number should be less than 10.</errorMessage>
    </validationRules>
</CustomObject>